# rust_nn_gpt

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
rust_nn_gpt/: Cargo.toml  build.rs  comp.spv
rust_nn_gpt/src/: cpu_utils.rs  gelu.rs  lib.rs  transformer.rs  transformer_weights.rs
rust_nn_gpt/src/cpu_transformer/: attention.rs  block.rs  config.rs  feedforward.rs  input_projection.rs  layernorm.rs  mod.rs  output_projection.rs  transformer.rs
rust_nn_gpt/src/cpu_transformer/blocks/: feedforward.rs  layernorm.rs  linear.rs  mod.rs  multihead_attention.rs  transformer_block.rs
rust_nn_gpt/src/gpu_transformer/: compute_pipeline.rs  gelu.rs  gpu_utils.rs  mod.rs  shader_loader.rs  vulkan_context.rs  wgpu_utils.rs
rust_nn_gpt/src/gpu_transformer/blocks/: attention.rs  feedforward.rs  gelu.rs  gpu_attention.rs  layernorm.rs  linear.rs  linear_layer.rs  mod.rs  multihead_attention.rs  output_projection.rs  transformer_block.rs  transformer_stack.rs
rust_nn_gpt/src/gpu_transformer/shaders/: adam_update.comp  attention.wgsl  attention_apply.comp  attention_apply_backward.comp  attention_backward.wgsl  attention_scores.comp  attention_scores_backward.comp  attention_softmax.comp  attention_softmax_backward.comp  feedforward.wgsl  feedforward_backward.comp  feedforward_backward.wgsl  gelu.comp  layernorm.wgsl  layernorm_adam_update.comp  layernorm_backward.comp  layernorm_backward.wgsl  layernorm_forward.comp  linear.comp  linear.wgsl  linear_backward.wgsl  linear_batched_backward.comp  linear_batched_forward.comp
test_enviorment/: Cargo.toml
test_enviorment/src/: main.rs
