[package]
name = "rust_nn_gpt"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
rand = "0.8.5"
bytemuck = "1.14"

[lints.clippy]
needless_return = "allow"
needless_range_loop = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
cloned_instead_of_copied = "deny"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }